Fix some issues with container alignment

--- a/sass/4-objects/_container.sass
+++ b/sass/4-objects/_container.sass
@@ -11,18 +11,24 @@
     &--align
         &--end
             align-items: flex-end
+            justify-content: flex-end
         &--center
             align-items: center
+            justify-content: center
         &--start
             align-items: flex-start
+            justify-content: flex-start
 
     &--justify
         &--end
             justfy-items: flex-end
+            align-content: flex-end
         &--center
             justify-items: center
+            align-content: center
         &--start
             justify-items: flex-start
+            align-content: flex-start
 
     &--debug:after
         content: ""
